Telas para editar

--- a/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarEventos.xhtml
@@ -75,7 +75,7 @@
 							value="#{consultaEventosView.selectedEvento.causasString}"
 							style="font-weight: bold" />
 
-						<p:button value="Editar"
+						<p:button value="Editar" outcome="editarEvento.xhtml"
 							disabled="#{!(consultaEventosView.botaoEditar)}">
 						</p:button>
 
