--- a/src/main/webapp/sistema/ONG/visualizarVagas.xhtml
+++ b/src/main/webapp/sistema/ONG/visualizarVagas.xhtml
@@ -93,7 +93,7 @@
 							value="#{consultaVagasView.selectedVaga.ongEntity.nomeONG}"
 							style="font-weight: bold" />
 
-						<p:button value="Editar"
+						<p:button value="Editar" outcome="editarVaga.xhtml"
 							disabled="#{!(consultaVagasView.botaoEditar)}">
 						</p:button>
 
