--- a/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
+++ b/src/main/webapp/sistema/Voluntario/visualizarEventos.xhtml
@@ -77,7 +77,7 @@
 						<p:button value="Curtir" icon="ui-icon-like" disabled="#{!(consultaEventosView.botaoCurtir)}">
 						</p:button>
 
-						<p:button value="Editar" disabled="#{!(consultaEventosView.botaoEditar)}">
+						<p:button value="Editar" outcome="editarEvento.xhtml" disabled="#{!(consultaEventosView.botaoEditar)}">
 						</p:button>
 
 					</p:panelGrid>
