--- a/src/main/webapp/cadastrarVoluntario.xhtml
+++ b/src/main/webapp/cadastrarVoluntario.xhtml
@@ -102,15 +102,13 @@
 						<p:outputLabel value="Rua" for="inputText-rua" />
 						<p:inputText id="inputText-rua" style="width:100%" maxlength="200"
 							value="#{voluntarioController.voluntarioModel.rua}"
-							required="true"
-							requiredMessage="O campo rua é de preenchimento obrigatório" />
+						 />
 
 						<p:outputLabel value="Numero" for="inputText-numero" />
 						<p:inputText id="inputText-numero" style="width:50px"
 							maxlength="200"
 							value="#{voluntarioController.voluntarioModel.numero}"
-							required="true"
-							requiredMessage="O  campo numero é de preenchimento obrigatório" />
+						 />
 
 						<p:outputLabel value="Complemento" for="inputText-complemento" />
 						<p:inputText id="inputText-complemento" style="width:100%"
@@ -120,7 +118,7 @@
 						<p:outputLabel value="CEP" for="inputText-cep" />
 						<p:inputMask id="inputText-cep" style="width:100%" maxlength="200"
 							value="#{voluntarioController.voluntarioModel.cep}"
-							required="true"
+							required="false"
 							mask="99999-999"
 							requiredMessage="O campo CEP é de preenchimento obrigatório" />
 
@@ -137,13 +135,6 @@
 							value="#{voluntarioController.voluntarioModel.estado}"
 							required="true"
 							requiredMessage="O campo estado  é de preenchimento obrigatório" />
-
-						<p:outputLabel value="Pais" for="inputText-pais" />
-						<p:inputText id="inputText-pais" style="width:100%"
-							maxlength="200"
-							value="#{voluntarioController.voluntarioModel.pais}"
-							required="true"
-							requiredMessage="O campo pais é de preenchimento obrigatório" />
 
 						<p:separator />
 						<br />
