--- a/src/main/webapp/sistema/Voluntario/editarVoluntario.xhtml
+++ b/src/main/webapp/sistema/Voluntario/editarVoluntario.xhtml
@@ -123,7 +123,7 @@
 							<p:inputText style="width:100%"
 								maxlength="200" value="#{editarVoluntario.voluntario.estado}"
 								required="true"
-								requiredMessage="O campo estado  é de preenchimento obrigatório" />
+								requiredMessage="O campo estado é de preenchimento obrigatório" />
 						</p:inplace>
 
 						<p:separator />
@@ -202,12 +202,12 @@
 
 						<p:commandButton value="Salvar alterações"
 							id="commandButton-salvar" icon="ui-icon-gear"
-							action="#{voluntarioController.salvarNovoVoluntario}"
+							action="#{editarVoluntario.atualizarVoluntario}"
 							update="panelGrid-campos-form" ajax="false" />
 
 						<p:commandButton value="Excluir cadastro"
 							id="commandButton-excluir" icon="ui-icon-gear"
-							action="#{voluntarioController.salvarNovoVoluntario}"
+							action="#{editarVoluntario.atualizarVoluntario}"
 							update="panelGrid-campos-form" ajax="false" />
 
 					</h:panelGrid>
